--- a/index.html
+++ b/index.html
@@ -26,13 +26,7 @@
       <div class="switches">
         <div id="toggle-theme" class="toggle-theme badge bg-secondary">
           <img id="toggle-icon" src="assets/img/logo/moon.svg" alt="icon theme" class="toggle-theme__icon">
-          <p id="toggle-text" class="toggle-theme__text">Dark Mode</p>
-        </div>
-        <div class="colors">
-          <div class="colors__item colors__item--blue"></div>
-          <div class="colors__item colors__item--green"></div>
-          <div class="colors__item colors__item--purple"></div>
-          <div class="colors__item colors__item--orange"></div>
+          <p id="toggle-text" class="toggle-theme__text">DARK SIDE</p>
         </div>
       </div>
       <button class="navbar-toggler border-secondary" type="button" data-bs-toggle="collapse"
@@ -136,7 +130,7 @@
   <section id="about" class="container my-5">
     <div class="row w-100 mx-auto p-3 rounded shadow">
       <div class="col-12 col-lg-5 mb-1">
-        <div class="rounded shadow-1 card-hover">
+        <div class="rounded shadow-1 border border-0 border-bottom border-2 border-danger">
           <div class="w-100">
             <img src="assets/img/about/02.jpg" alt="" id="aboutMe" class="w-100 h-100 rounded" style="cursor: pointer;">
           </div>
@@ -181,17 +175,21 @@
           </div>
         </div>
       </div>
-      <!-- card-3 writer comic -->
+      <!-- card-3 force -->
       <div class="col-12 col-md-6 col-lg-4 my-2">
         <div class="card border card-hover shadow">
           <div class="card-header p-0 m-0">
-            <i class="fas fa-feather-alt fa-5x my-3"></i>
+            <i class="fas fa-journal-whills fa-5x my-3"></i>
           </div>
           <div class="card-body">
-            <h3 class="my-3 fw-bold">Escritor de Cómics</h3>
-            <p class="card-text my-3">He escrito cómics desde que tenía 14 años de edad. Empecé a inspirarme en mis
-              sueños y a diseñar
-              personajes con los que me sentía identificado dentro de mi universo de fantasía.
+            <h3 class="my-3 fw-bold">Camino del Jedi</h3>
+            <p class="card-text my-3"><b><i title="Hace un par de años" data-bs-toggle="tooltip">En una galaxia muy, muy
+                  lejana...</i></b> <br>Empecé a preguntarme "¿Exactamente que estoy
+              buscando?" en mi cabeza una voz que respondía:<br><i>&#60;&#60;Nada, y a la vez todo&#62;&#62;</i>. Y en
+              ese
+              momento quería comenzar en los caminos de la <b><i title="programación"
+                  data-bs-toggle="tooltip">fuerza</i></b>, primero
+              como un <b><i title="Junior Developer" data-bs-toggle="tooltip">padawan</i></b>
             </p>
           </div>
         </div>
@@ -213,7 +211,7 @@
               <!-- tech -->
               <div class="accordion-item border-0 mb-2">
                 <h2 class="accordion-header" id="headingTech">
-                  <button type="button" class="btn btn-dark btn-lg border-0 w-100 text-uppercase text-start"
+                  <button type="button" class="btn btn-lg border-0 w-100 text-uppercase text-start"
                     data-bs-toggle="collapse" data-bs-target="#collapseTech" aria-expanded="true"
                     aria-controls="collapseTech">Tecnologías
                     <i class="fas fa-caret-down fs-3"></i>
@@ -444,7 +442,6 @@
               onclick="showMessage('WINDOWS TERMINAL', 
               'windows-terminal.png', `Aplicación de terminal moderna disponible en Windows 10 y posterior. Mejora sustancialmente la pobre terminal (cmd), incorporando características como soporte de pestañas, personalización de tipografía, efectos y también permite utilizar diferentes shells, como por ejemplo, el Símbolo de sistema de Windows (cmd), PowerShell o incluso la nueva WSL (Windows Subsystem for Linux)<br><i class='fas fa-terminal fa-1x'></i>`);">
           </div>
-
         </div>
         <!-- WSL Windows Subsystem For Linux -->
         <div class="col-6 col-md-4 col-lg-3">
@@ -468,7 +465,7 @@
                   <i class="fab fa-html5 fs-2 text-danger"></i>
                 </div>
                 <div class="col-11">
-                  <div class="progress" style="height: 27px">
+                  <div class="progress" style="height: 27px; border: 1px solid #cba;">
                     <div class="progress-bar progress-bar-striped bg-danger text-light fw-bold progress-bar-animated"
                       role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%">
                       75%
@@ -508,7 +505,7 @@
           </div>
         </div>
         <!-- FRAMEWORKS WEB -->
-        <div class="col-12 col-md-3 col-lg-6 mx-auto">
+        <div class="col-12 col-md-3 col-lg-6 mx-auto mb-3">
           <div class="card px-3 py-3">
             <div class="card-header">
               <h2 class="text-center">FRAMEWORKS FRONTEND</h2>
