change bg mobile and visibility group button

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
           </div>
         </div>
         <!-- FRAMEWORKS WEB -->
-        <div class="col-12 col-md-3 col-lg-6 mx-auto mb-3">
+        <div class="col-12 col-md-3 col-lg-6 mx-auto mt-3">
           <div class="card px-3 py-3">
             <div class="card-header">
               <h2 class="text-center">FRAMEWORKS FRONTEND</h2>
