--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navContent">
         <ul class="navbar-nav fs-5">
           <li class="nav-item py-2 pe-2">
-            <a class="nav-link" href="#about">Acerca de mi</a>
+            <a class="nav-link" href="#about">Acerca de mí</a>
           </li>
           <li class="nav-item py-2 pe-2">
             <a class="nav-link" href="#works">Trabajos</a>
@@ -57,7 +57,7 @@
       <!-- Facebook -->
       <a href="https://www.facebook.com/profile.php?id=100009064421475" target="_blank"
         class="mt-3 btn btn-lg btn-warning btn-outline-primary border-0 text-dark hover-light">
-        <i class="fab fa-facebook fs-2"></i> faceboook</a>
+        <i class="fab fa-facebook fs-2"></i> Faceboook</a>
       <!-- Twitter -->
       <a href="https://twitter.com/MarcoContreraas" target="_blank"
         class="btn btn-lg btn-warning btn-outline-info border-0 text-dark text-start hover-light">
@@ -169,7 +169,7 @@
             <p class="card-text my-3">Después de trabajar como desarrollador <i>backend</i>, sentí la necesidad de
               aprender más
               sobre el
-              diseño gráfico y asi dedicarme a ser <i>freelancer</i> ofreciendo a mis clientes un mejor servicio y
+              diseño gráfico y así dedicarme a ser <i>freelancer</i> ofreciendo a mis clientes un mejor servicio y
               <strong>dedicarles mi completa atención para conectar con ellos y sus necesidades.</strong>
             </p>
           </div>
@@ -184,12 +184,12 @@
           <div class="card-body">
             <h3 class="my-3 fw-bold">Camino del Jedi</h3>
             <p class="card-text my-3"><b><i title="Hace un par de años" data-bs-toggle="tooltip">En una galaxia muy, muy
-                  lejana...</i></b> <br>Empecé a preguntarme "¿Exactamente que estoy
-              buscando?" en mi cabeza una voz que respondía:<br><i>&#60;&#60;Nada, y a la vez todo&#62;&#62;</i>. Y en
+                  lejana...</i></b> <br>Empecé a preguntarme "¿Exactamente qué estoy
+              buscando?" en mi cabeza una voz respondía:<br><i>&#60;&#60;"Nada, y a la vez todo"&#62;&#62;</i>. Y en
               ese
               momento quería comenzar en los caminos de la <b><i title="programación"
                   data-bs-toggle="tooltip">fuerza</i></b>, primero
-              como un <b><i title="Junior Developer" data-bs-toggle="tooltip">padawan</i></b>
+              como un <b><i title="Junior Developer" data-bs-toggle="tooltip">padawan.</i></b>
             </p>
           </div>
         </div>
@@ -242,7 +242,7 @@
                   data-bs-parent="#accordionCard">
                   <div class="accordion-body">
                     <p class="text-start">En este proyecto que es parte de mi segundo desafío en la academia
-                      diseñe
+                      diseñé
                       una
                       <em>Landing
                         Page</em> que es
@@ -307,12 +307,12 @@
                 <div class="accordion-collapse collapse" id="collapseDescription2" aria-labelledby="headingDescription2"
                   data-bs-parent="#accordionCard2">
                   <div class="accordion-body">
-                    <p class="text-start">Este proyecto es parte de mi tercer desafío en la academia donde emite
+                    <p class="text-start">Este proyecto es parte de mi tercer desafío en la academia, donde emite
                       un
-                      prototipo existente, puedes verlo <a href="#" title="#">aquí</a> en este ejercicio aplique los
+                      prototipo existente, el cual puedes ver <a href="#" title="#">aquí</a>. En este ejercicio apliqué los
                       conocimientos sobre el <em><a href="https://developer.mozilla.org/es/docs/Glossary/Viewport"
                           target="_blank">Viewport</a></em> lo que permite que el diseño mantenga la coherencia en
-                      cualquier pantalla con diferentes alto y anchos de ventanas de los navegadores.
+                      cualquier pantalla con diferente altura y anchura de ventanas de los navegadores.
                     </p>
                   </div>
                 </div>
@@ -380,9 +380,9 @@
                   <div class="accordion-body">
                     <p class="text-start">Este proyecto es parte de mi cuarto desafío en la academia donde
                       emite un
-                      prototipo existente, puedes verlo <a href="#" title="#">aquí</a> en este ejercicio aplique
+                      prototipo existente, puedes verlo <a href="#" title="#">aquí</a>. En este ejercicio apliqué
                       los
-                      conocimientos aprendido sobre <em><a href="https://getbootstrap.com/" target="_blank"
+                      conocimientos aprendidos sobre <em><a href="https://getbootstrap.com/" target="_blank"
                           title="framework css" data-bs-toggle="tooltip">Bootstrap</a></em> lo que me permitió hacer
                       un
                       diseño responsivo para
